fixes gap on right side of actions bar

--- a/public/css/actionsbar.css
+++ b/public/css/actionsbar.css
@@ -2,6 +2,11 @@
     font-size: 0; /* need this to remove white space between inline block elements - can override on children*/
 }
 
+.row.actions-bar{
+    margin-left:0;
+    margin-right:0;
+}
+
 .actions-bar{
     position:absolute;
     bottom:0;
